deployment/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xylia-deployment
  labels:
    app: xylia
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xylia
  template:
    metadata:
      labels:
        app: xylia
    spec:
      containers:
      - name: xylia
        image: devanik21/xylia:1.0.0
        ports:
        - containerPort: 8501
