deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xylia-service
spec:
  selector:
    app: xylia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  type: ClusterIP
